<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/exit_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit_dialog"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:textStyle="bold" />

    <!-- Message TextView -->
    <TextView
        android:id="@+id/exit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/are_you_sure_you_want_to_exit_the_app"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:paddingBottom="16dp" />

    <!-- Button Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/schedule_a_call_card_color"
             />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/schedule_a_call_card_color"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>
