<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/privacy_policy_dialog_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/privacy_policy_dialog_box"
        android:background="@drawable/rounded_corners_privacy_policy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        />

    <ImageView
        android:id="@+id/privacy_policy_dialog_icon"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:padding="@dimen/_7sdp"
        android:src="@drawable/privacy_policy_dialog_icon"
        app:layout_constraintBottom_toBottomOf="@+id/privacy_policy_dialog_box"
        app:layout_constraintEnd_toEndOf="@+id/privacy_policy_dialog_box"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="@+id/privacy_policy_dialog_box"
        app:layout_constraintTop_toTopOf="@+id/privacy_policy_dialog_box"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/privacy_policy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/privacy_policy_dialog_box"
        app:layout_constraintEnd_toEndOf="@+id/privacy_policy_dialog_icon"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="@+id/privacy_policy_dialog_icon"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_dialog_icon"
        app:layout_constraintVertical_bias="0.00" />

    <TextView
        android:id="@+id/privacy_policy_dialog_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:text="@string/we_never_use_or_share_your_personal_information_without_your_permission"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toTopOf="@+id/i_have_read_and_accept_privacy_policy_tv_privacy_policy_dialog"
        app:layout_constraintEnd_toEndOf="@+id/privacy_policy_tv"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@id/privacy_policy_tv"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy_tv"
        app:layout_constraintVertical_bias="0.07999998" />

    <ImageView
        android:id="@+id/check_box_privacy_policy_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/check_box_privacy_policy_dialog"
        app:layout_constraintBottom_toTopOf="@id/privacy_policy_dialogue_button_rectangle"
        app:layout_constraintEnd_toStartOf="@id/i_have_read_and_accept_privacy_policy_tv_privacy_policy_dialog"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="@id/privacy_policy_dialog_box"
        app:layout_constraintTop_toBottomOf="@id/privacy_policy_dialog_description_text"
        app:layout_constraintVertical_bias="0.610000024" />

    <TextView
        android:id="@+id/i_have_read_and_accept_privacy_policy_tv_privacy_policy_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_have_read_and_accept_privacy_policy"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toTopOf="@id/privacy_policy_dialogue_button_rectangle"
        app:layout_constraintEnd_toEndOf="@id/privacy_policy_dialog_box"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="@id/privacy_policy_dialog_box"
        app:layout_constraintTop_toBottomOf="@id/privacy_policy_dialog_description_text"
        app:layout_constraintVertical_bias="0.140000024" />

    <ImageView
        android:id="@+id/privacy_policy_dialogue_button_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/privacy_policy_dialogue_button_rectangle"
        app:layout_constraintBottom_toBottomOf="@id/privacy_policy_dialog_box"
        app:layout_constraintEnd_toEndOf="@id/privacy_policy_dialog_box"
        app:layout_constraintHorizontal_bias="0.60"
        app:layout_constraintStart_toStartOf="@id/privacy_policy_dialog_box"
        app:layout_constraintTop_toBottomOf="@id/i_have_read_and_accept_privacy_policy_tv_privacy_policy_dialog"
        app:layout_constraintVertical_bias="0.47000003" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/continue_1"
        android:textStyle="bold"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="@id/privacy_policy_dialogue_button_rectangle"
        app:layout_constraintEnd_toEndOf="@id/privacy_policy_dialogue_button_rectangle"
        app:layout_constraintTop_toTopOf="@id/privacy_policy_dialogue_button_rectangle"
        app:layout_constraintBottom_toBottomOf="@id/privacy_policy_dialogue_button_rectangle"/>


</androidx.constraintlayout.widget.ConstraintLayout>